<resources>
    <string name="app_name">Velo-Jet</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="start_capture">Lancer</string>
    <string name="stop_capture">Arreter</string>
    <string name="save_capture">Sauvegarder</string>

    <!-- Buttons strings -->
    <string name="button_generate">GENERER</string>
    <string name="btn_save">SAUVEGARDER</string>

    <!-- Hints -->
    <string name="hint_length">Longueur (KM)</string>
    <string name="hint_starting_address">Adresse de départ</string>
    <string name="hint_ending_address">Adresse de fin</string>
    <string name="hint_search">Recherche Nom/Date/Distance</string>

    <!-- Activities titles -->
    <string name="title_activity_main">Capture de Trajet</string>
    <string name="title_activity_history">Historique</string>
    <string name="title_activity_generator">Générateur de Trajet</string>

    <!-- Menus Strings-->
    <string name="menu_capture">Trajet</string>
    <string name="menu_history">Historique</string>
    <string name="menu_generator">Générateur</string>
    <string name="menu_logout">Déconnexion</string>

    <string name="help_text_login">Cliquer sur le boutton de connexion pour vous connecter avec un compte Google. Si vous n\'avez pas de connection vous pouvez utiliser un compte temporaire.</string>
    <string name="title_activity_history_item">HistoryItemActivity</string>
</resources>
