<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_capture"
            android:icon="@drawable/ic_directions_bike"
            android:title="@string/menu_capture" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_generator"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_generator" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_account_box"
            android:title="@string/menu_logout" />
    </group>
</menu>
