<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ets.astl.pfe_velo_jet.activity.GeneratorActivity"
    tools:showIn="@layout/app_bar_generator"
    android:focusableInTouchMode="true">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/generator_map"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/config_panel" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/config_panel"
        android:layout_alignParentBottom="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Circuit Fermé"
                android:id="@+id/switch1"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:checked="false" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editText2"
                    android:hint="@string/hint_length" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText3"
                    android:hint="@string/hint_starting_address"
                    android:layout_span="2" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText4"
                    android:hint="@string/hint_ending_address"
                    android:layout_span="2" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_generate"
                android:id="@+id/button"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:elevation="2dp"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:elevation="2dp"
                android:layout_marginLeft="5dp" />
        </TableRow>
    </TableLayout>


</RelativeLayout>
