<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.CaptureActivity"
    tools:showIn="@layout/app_bar_main"
    android:focusableInTouchMode="true"
    android:clipToPadding="false" >

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/linLayout" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:weightSum="3"
        android:id="@+id/linLayout"
        android:layout_marginBottom="10dp"
        android:elevation="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/background_material_light"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_above="@+id/linearLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Distance (km)"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="0.00"
                android:id="@+id/distance_label"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Vitesse (km/h)"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="00"
                android:id="@+id/speed_label"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Temps"
                android:id="@+id/textView7"
                android:layout_gravity="center_horizontal" />

            <Chronometer
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chronometer"
                android:format="%s"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="false"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_capture"
                android:id="@+id/start_button"
                android:layout_weight="1"
                android:background="@drawable/raised_button_primary"
                android:elevation="2dp"
                android:layout_marginRight="5dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_capture"
                android:id="@+id/pause_button"
                android:layout_weight="1"
                android:elevation="2dp"
                android:background="@drawable/raised_button_primary"
                android:layout_marginLeft="5dp"
                android:enabled="false" />

        </LinearLayout>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/save_capture"
            android:id="@+id/save_button"
            android:layout_weight="1"
            android:background="@drawable/raised_button_accent"
            android:elevation="2dp"
            android:layout_marginTop="5dp"
            android:enabled="false" />
    </LinearLayout>

</RelativeLayout>
